# diator

./: 404.html  CONTRIBUTING.md  LICENSE.rst  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  setup.yml
architecture/: index.html
contributing/: index.html
di/: index.html
docs/: architecture.md  di.md  events.md  examples.md  middlewares.md  requests.md
events/: index.html
examples/: azure.py  di.py  index.html  rodi.py  simple.py
examples/azure_service_bus/: command.py  command_handler.py  event.py  main.py
examples/common/: consumer.py  container.py  join_meeting_room_command.py  join_meeting_room_command_handler.py  main.py  middlewares.py  user_joined_domain_event.py  user_joined_event.py  user_joined_event_handler.py  user_joined_notification_event.py
examples/di_lib_as_di_container/: join_meeting_room_command_handler.py  main.py  middlewares.py  user_joined_event_handler.py
examples/rodi_as_di_container/: join_meeting_room_command_handler.py  main.py  user_joined_domain_event.py  user_joined_notification_event.py
introduction/: index.html
middlewares/: index.html
requests/: index.html
search/: search_index.json
src/diator/: container.py  generics.py  map.py  mediator.py  response.py
src/diator/container/: __init__.py  di.py  protocol.py  rodi.py
src/diator/dispatcher/: __init__.py  default.py  dispatch_result.py  protocol.py
src/diator/events/: __init__.py  event.py  event_emitter.py  event_handler.py  map.py
src/diator/events/consumer/: protocol.py  redis.py
src/diator/events/message_brokers/: __init__.py  protocol.py  redis.py
src/diator/message_brokers/: azure.py  rabbitmq.py  redis.py
src/diator/middlewares/: __init__.py  base.py  logging.py  protocol.py
src/diator/requests/: __init__.py  map.py  request.py  request_handler.py
tests/: conftest.py
tests/test_e2e/: test_mediator_logic.py
tests/test_integration/: test_di.py  test_message_brokers.py  test_rodi.py
tests/test_unit/: test_dispatcher.py  test_request_response.py
