[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diator"
version = "0.0.1"
authors = [{ name = "Murad Akhundov", email = "akhundov1murad@gmail.com" }]
description = "Diator is a Python library for implementing CQRS pattern in your Python applications. It provides a set of abstractions and utilities to help you separate your read and write concerns, allowing for better scalability, performance, and maintainability of your application."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/akhundMurad/diator"
"Bug Tracker" = "https://github.com/akhundMurad/diator/issues"
