[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diator"
version = "0.1.2"
authors = [{ name = "Murad Akhundov", email = "akhundov1murad@gmail.com" }]
description = "Diator is a Python library for implementing CQRS pattern in your Python applications."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

dependencies = ["orjson", "dataclass_factory"]

keywords = [
  "diator",
  "CQRS",
  "event",
  "command",
  "query",
  "events",
  "commands",
  "queries",
  "mediator",
  "mediatr",
  "di",
  "async",
  "asyncio",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/examples",
  "/deps",
  "/htmlcov",
  "/tests",
  "mkdocs-plugins.code-workspace",
  "Makefile",
  "CODE_OF_CONDUCT.md",
  ".isort.cfg",
  ".gitignore",
  ".flake8",
  "junit",
  "requirements.txt",
  "mypy.ini",
  "pytest.ini",
  ".flake8",
  "pytest.ini",
]

[project.urls]
"Homepage" = "https://github.com/akhundMurad/diator"
"Bug Tracker" = "https://github.com/akhundMurad/diator/issues"

[project.optional-dependencies]
redis = ["redis"]
azure = ["azure-servicebus"]
test = [
  "pytest",
  "pytest-asyncio",
  "types-redis",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "black",
  "vulture",
  "mypy",
  "isort",
  "flake8",
  "azure-servicebus",
  "redis",
  "di[anyio]",
  "rodi",
]

[tool.isort]
profile = "black"
